--- a/Resolvido_Imitation_Learning_Lab_01.ipynb
+++ b/Resolvido_Imitation_Learning_Lab_01.ipynb
@@ -1028,12 +1028,12 @@
         "\n",
         "    optimizer.step()\n",
         "\n",
-        "    train_acc = acc(m, y)/100000\n",
+        "    _acc = acc(m, y)/100000\n",
         "\n",
-        "    train_loss = loss.detach().item()\n",
+        "    _loss = loss.detach().item()\n",
         "    print('Epoch: %d | Loss: %.4f | Train Accuracy: %.4f' \\\n",
-        "          %(epoch, train_loss, train_acc))\n",
-        "    return train_loss, train_acc"
+        "          %(epoch, _loss, _acc))\n",
+        "    return _loss, _acc"
       ],
       "execution_count": 27,
       "outputs": []
