--- a/Resolvido_Imitation_Learning_Lab_01.ipynb
+++ b/Resolvido_Imitation_Learning_Lab_01.ipynb
@@ -1016,7 +1016,7 @@
         "# HW: Implementar função de Treino\n",
         "# ela deve retornar informações de loss e acurácia\n",
         "\n",
-        "# não consegui\n"
+        "# não consegui\n",
         "def train():\n",
         "  model = model.train()\n",
         "  for epoch in range(50):\n",
